--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: elixir
-elixir:
-  - 1.2.0
-  - 1.3.0
-  - 1.4.0
-env: MIX_ENV=test
-otp_release:
-  - 18.1
+matrix:
+  include:
+    - otp_release: 18.1
+      elixir: 1.2.0
+      env: MIX_ENV=test
+    - otp_release: 18.1
+      elixir: 1.3.0
+      env: MIX_ENV=test
+    - otp_release: 19.2
+      elixir: 1.4.0
+      env: MIX_ENV=test
 after_success:
   - mix coveralls.travis
