Use matrix strategy

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -8,16 +8,18 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        otp: ['21.0', '22.0']
+        elixir: ['1.7.2', '1.10.1']
     steps:
     - uses: actions/checkout@v2
     - name: Setup elixir
       uses: actions/setup-elixir@v1
       with:
-        elixir-version: '1.9.4' # Define the elixir version [required]
-        otp-version: '22.2' # Define the OTP version [required]
+        elixir-version: ${{matrix.elixir}} # Define the elixir version [required]
+        otp-version: ${{matrix.otp} # Define the OTP version [required]
     - name: Install Dependencies
       run: mix deps.get
     - name: Run Tests
